gitlab-postgresql-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gitlab-ce
  name: gitlab-ce-postgresql
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gitlab-ce
    deploymentconfig: gitlab-ce-postgresql
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      post:
        execNewPod:
          command:
          - /usr/bin/scl
          - enable
          - rh-postgresql10
          - export PGPASSWORD='rBXr04eCWqBTI3UI'; psql -h 'gitlab-ce-postgresql' -U
            postgres -d gitlabhq_production -c 'CREATE EXTENSION IF NOT EXISTS pg_trgm;'
          containerName: gitlab-ce-postgresql
        failurePolicy: Abort
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab-ce
        deploymentconfig: gitlab-ce-postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: userYPQ
        - name: POSTGRESQL_PASSWORD
          value: i6Typpogyhg81VQc
        - name: POSTGRESQL_DATABASE
          value: gitlabhq_production
        - name: POSTGRESQL_ADMIN_PASSWORD
          value: rBXr04eCWqBTI3UI
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: gitlab-ce-postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
              'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 300m
            memory: 300Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: gitlab-ce-volume-3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitlab-ce-volume-3
        persistentVolumeClaim:
          claimName: gitlab-ce-postgresql
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gitlab-ce-postgresql
      from:
        kind: ImageStreamTag
        name: postgresql:10
        namespace: openshift
    type: ImageChange
