gitlab-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab-ce
  name: gitlab-ce-redis
spec:
  ports:
  - name: 6379-redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: gitlab-ce
    deploymentconfig: gitlab-ce-redis
  sessionAffinity: None
  type: ClusterIP
