gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab-ce
  name: gitlab-ce
spec:
  ports:
  - name: 22-ssh
    port: 22
    protocol: TCP
    targetPort: 22
  - name: 443-https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: 80-http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gitlab-ce
    deploymentconfig: gitlab-ce
  sessionAffinity: None
  type: ClusterIP
