gitlab-template.yaml
---
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: gitlab-ce
  annotations:
    iconClass: icon-gitlab
    description: "GitLab. Collaboration and source control management: code, test,
      and deploy together! \n\n GitLab requries that the serviceaccount for the main
      GitLab app be added to the anyuid security context. The service account name
      is: <application name>-user"
    tags: instant-app,gitlab,VCS,ci-cd
labels:
  createdBy: gitlab-ce-template
objects:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    name: "${APPLICATION_NAME}"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    tags:
    - name: gitlab-12.10.14
      from:
        kind: DockerImage
        name: gitlab/gitlab-ce:12.10.14-ce.0
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    name: "${APPLICATION_NAME}-redis"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    tags:
    - name: 5.0.4
      from:
        kind: DockerImage
        name: redis:5.0.4-alpine
- kind: ServiceAccount
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-user"
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: "${APPLICATION_NAME}"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    strategy:
      type: Recreate
    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - gitlab-ce
        from:
          kind: ImageStreamTag
          name: "${APPLICATION_NAME}:gitlab-12.10.14"
    replicas: 1
    test: false
    selector:
      app: "${APPLICATION_NAME}"
      deploymentconfig: "${APPLICATION_NAME}"
    template:
      metadata:
        labels:
          app: "${APPLICATION_NAME}"
          deploymentconfig: "${APPLICATION_NAME}"
      spec:
        volumes:
        - name: gitlab-ce-volume-1
          persistentVolumeClaim:
            claimName: "${APPLICATION_NAME}-etc"
        - name: gitlab-ce-volume-2
          persistentVolumeClaim:
            claimName: "${APPLICATION_NAME}-data"
        containers:
        - name: gitlab-ce
          image: gitlab-ce
          ports:
          - containerPort: 22
            protocol: TCP
          - containerPort: 80
            protocol: TCP
          - containerPort: 443
            protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 6Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
          - name: gitlab-ce-volume-1
            mountPath: "/etc/gitlab"
          - name: gitlab-ce-volume-2
            mountPath: "/gitlab-data"
          readOnly: true
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: IfNotPresent
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        serviceAccount: "${APPLICATION_NAME}-user"
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: "${APPLICATION_NAME}-redis"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    strategy:
      type: Recreate
      recreateParams: {}
      resources: {}
    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - gitlab-ce-redis
        from:
          kind: ImageStreamTag
          name: "${APPLICATION_NAME}-redis:5.0.4"
    replicas: 1
    test: false
    selector:
      app: "${APPLICATION_NAME}"
      deploymentconfig: "${APPLICATION_NAME}-redis"
    template:
      metadata:
        labels:
          app: "${APPLICATION_NAME}"
          deploymentconfig: "${APPLICATION_NAME}-redis"
      spec:
        volumes:
        - name: gitlab-ce-volume-4
          persistentVolumeClaim:
            claimName: "${APPLICATION_NAME}-redis-data"
        containers:
        - name: gitlab-ce-redis
          image: gitlab-ce-redis
          command:
          - "/bin/sh"
          - "-ec"
          args:
          - exec redis-server
          ports:
          - containerPort: 6379
            protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 300Mi
          volumeMounts:
          - name: gitlab-ce-volume-4
            mountPath: "/data"
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: IfNotPresent
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    name: "${APPLICATION_NAME}-postgresql"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    strategy:
      type: Recreate
      recreateParams:
        post:
          failurePolicy: Abort
          execNewPod:
            containerName: gitlab-ce-postgresql
            command:
            - "/usr/bin/scl"
            - enable
            - rh-postgresql10
            - export PGPASSWORD='${POSTGRESQL_ADMIN_PASSWORD}'; psql -h '${APPLICATION_NAME}-postgresql'
              -U postgres -d ${POSTGRESQL_DATABASE} -c 'CREATE EXTENSION IF NOT EXISTS
              pg_trgm;'
      resources: {}
    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - gitlab-ce-postgresql
        from:
          kind: ImageStreamTag
          name: postgresql:10
          namespace: openshift
    replicas: 1
    test: false
    selector:
      app: "${APPLICATION_NAME}"
      deploymentconfig: "${APPLICATION_NAME}-postgresql"
    template:
      metadata:
        labels:
          app: "${APPLICATION_NAME}"
          deploymentconfig: "${APPLICATION_NAME}-postgresql"
      spec:
        volumes:
        - name: gitlab-ce-volume-3
          persistentVolumeClaim:
            claimName: "${APPLICATION_NAME}-postgresql"
        containers:
        - name: gitlab-ce-postgresql
          image: gitlab-ce-postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            exec:
              command:
              - "/bin/sh"
              - "-i"
              - "-c"
              - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
                'SELECT 1'
          livenessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 30
            tcpSocket:
              port: 5432
          resources:
            limits:
              cpu: '1'
              memory: 1024Mi
            requests:
              cpu: 300m
              memory: 300Mi
          volumeMounts:
          - name: gitlab-ce-volume-3
            mountPath: "/var/lib/pgsql/data"
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: IfNotPresent
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
- kind: Service
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    ports:
    - name: 22-ssh
      protocol: TCP
      port: 22
      targetPort: 22
    - name: 443-https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: 80-http
      protocol: TCP
      port: 80
      targetPort: 80
    selector:
      app: "${APPLICATION_NAME}"
      deploymentconfig: "${APPLICATION_NAME}"
    type: ClusterIP
    sessionAffinity: None
- kind: Service
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-redis"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    ports:
    - name: 6379-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
    selector:
      app: "${APPLICATION_NAME}"
      deploymentconfig: "${APPLICATION_NAME}-redis"
    type: ClusterIP
    sessionAffinity: None
- kind: Service
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-postgresql"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    ports:
    - name: 5432-postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
    selector:
      app: "${APPLICATION_NAME}"
      deploymentconfig: "${APPLICATION_NAME}-postgresql"
    type: ClusterIP
    sessionAffinity: None
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-redis-data"
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: "${REDIS_VOL_SIZE}"
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-etc"
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: "${ETC_VOL_SIZE}"
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-data"
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: "${GITLAB_DATA_VOL_SIZE}"
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: "${APPLICATION_NAME}-postgresql"
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: "${POSTGRESQL_VOL_SIZE}"
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: "${APPLICATION_NAME}"
    labels:
      app: "${APPLICATION_NAME}"
  spec:
    host: "${APPLICATION_HOSTNAME}"
    to:
      kind: Service
      name: "${APPLICATION_NAME}"
    port:
      targetPort: 80-http
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
parameters:
- description: The name for the application. The service will be named like the application.
  displayName: Application name.
  name: APPLICATION_NAME
  value: gitlab-ce
- description: Hostname for service routes. Set this in order to have the GitLab display
    the correct clone urls.
  displayName: Gitlab instance hostname
  name: APPLICATION_HOSTNAME
  required: true
- name: GITLAB_ROOT_PASSWORD
  displayName: GitLab Root User Password
  description: Password for the GitLab 'root' user. Must be at least 8 characters
    long. Leave blank if you would rather configure the password using the website
    during first use.
- name: POSTGRESQL_USER
  displayName: PostgreSQL User
  description: Username for PostgreSQL user that will be used for accessing the database.
  generate: expression
  from: user[A-Z0-9]{3}
  required: true
- name: POSTGRESQL_PASSWORD
  displayName: PostgreSQL Password
  description: Password for the PostgreSQL user.
  generate: expression
  from: "[a-zA-Z0-9]{16}"
  required: true
- name: POSTGRESQL_ADMIN_PASSWORD
  displayName: PostgreSQL Admin User Password
  description: Password for the PostgreSQL Admin user.
  generate: expression
  from: "[a-zA-Z0-9]{16}"
  required: true
- name: POSTGRESQL_DATABASE
  displayName: PostgreSQL Database Name
  description: Name of the PostgreSQL database accessed.
  value: gitlabhq_production
  required: true
- name: UNICORN_WORKERS
  displayName: Number of Unicorn Workers
  description: Number of Unicorn Workers to use per instance. Must be at least 2.
  value: '2'
  required: true
- description: Volume size for /etc
  displayName: "/etc/gitlab volume size"
  name: ETC_VOL_SIZE
  value: 100Mi
- description: Volume size for GitLab data
  displayName: GitLab data volume size
  name: GITLAB_DATA_VOL_SIZE
  value: 10Gi
- description: Volume size for postgresql data
  displayName: postgresql volume size
  name: POSTGRESQL_VOL_SIZE
  value: 2Gi
- description: Volume size for redis data
  displayName: redis volume size
  name: REDIS_VOL_SIZE
  value: 512Mi
- name: NAMESPACE
  displayName: Namespace name where Gitlab CE will be deployed
  description: Namespace name where Gitlab CE will be deployed
  value: gitlab
  required: true
